# miniCloud

./: CMakeLists.txt  README.md  api_interface.txt  cluster_1_config.txt  cluster_2_config.txt  master_config.txt  start_service.sh  stop_service.sh
SMTP/: CMakeLists.txt  smtptest.cpp
SMTP/src/SMTP/: mailbox.cpp  mailbox.hpp  smtpclient.cpp  smtpclient.hpp  smtpserver.cpp  smtpserver.hpp
controller/: CMakeLists.txt
controller/src/controller/: admincontroller.cpp  admincontroller.hpp  controller.cpp  controller.hpp  dispatchcontroller.cpp  dispatchcontroller.hpp  dummycontroller.cpp  dummycontroller.hpp  fallbackcontroller.cpp  fallbackcontroller.hpp  mailcontroller.cpp  mailcontroller.hpp  staticcontroller.cpp  staticcontroller.hpp  storagecontroller.cpp  storagecontroller.hpp  usercontroller.cpp  usercontroller.hpp
frontendservers/: CMakeLists.txt  dispatcher.cpp  frontendserver.cpp
httpserver/: CMakeLists.txt
httpserver/src/httpserver/: httpserver.cpp  httpserver.hpp  router.cpp  router.hpp  threadpool.hpp
miniCloud/: package-lock.json  package.json
miniCloud/public/: index.html
miniCloud/src/: App.css  App.js  config.json  constants.js  fetcher.js
miniCloud/src/component/: Admin.js  File.js  Folder.js  Login.js  Mailbox copy.js  Mailbox.js  MenuBar.js  Options.js  Storage.js
network/: CMakeLists.txt
network/src/network/: address.cpp  address.hpp  datachunk.cpp  datachunk.hpp  httprequest.cpp  httprequest.hpp  httpresponse.cpp  httpresponse.hpp  networkinfo.cpp  networkinfo.hpp  staticfile.cpp  staticfile.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
service/: CMakeLists.txt  servicetest.cpp
service/src/service/: adminservice.cpp  adminservice.hpp  cookieservice.cpp  cookieservice.hpp  dispatchservice.cpp  dispatchservice.hpp  mailservice.cpp  mailservice.hpp  staticservice.cpp  staticservice.hpp  storageservice.cpp  storageservice.hpp  userservice.cpp  userservice.hpp
storeclient/: CMakeLists.txt
storeclient/src/storeclient/: storeclient.cpp  storeclient.hpp
storeserver/: CMakeLists.txt  protocol.txt
storeserver/src/: address.h  db_logger.cpp  db_logger.h  master_node.h  master_server.cpp  parser.cpp  parser.h  request.h  request_queue.cpp  request_queue.h  socket_reader_writer.cpp  socket_reader_writer.h  tablet_node.cpp  tablet_node.h  tablet_server.cpp  tablet_worker.cpp  tablet_worker.h  tablet_worker_primary.cpp  tablet_worker_primary.h  tablet_worker_secondary.cpp  tablet_worker_secondary.h  task_queue.cpp  task_queue.h  tester_crz.cpp  tester_rcv.cpp  tester_snd.cpp
utils/: CMakeLists.txt
utils/src/utils/: utils.cpp  utils.hpp
